<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morse App</string>
    <string name="hello_world">Hello world!</string>
    <string name="Capture">Take Picture!</string>
    <string name="button_text">Switch to Receivemode</string>
    <string name="action_settings">frequency</string>
    <string name="permdesc_flashlight">Berechtigung das Blitzlicht zu nutzen</string>
    <string name="permlab_flashlight">Blitzlicht</string>
    <string name="flash_feature_not_available">Blitz kann nicht von der Anwendung genutzt werden</string>
    <string name="dispatch_button_text">Senden</string>
    <string name="cancel_button_text">Abbrechen</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="stringcancel">cancel</string>
    <string name="stringset">set</string>
    <string name="pausesBetweenCharsText">keine Pause zwischen Zeichen</string>

</resources>